bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  if (90<=n<=110) || (190<=n<=210) {
    return true
  } else {
    return false
  }
}